.k8s/sqldatabase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sqldatabase
  name: sqldatabase
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sqldatabase
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/local: "true"
        io.kompose.service: sqldatabase
    spec:
      containers:
      - image: sqldatabase
        imagePullPolicy: ""
        name: sqldatabase
        ports:
        - containerPort: 1433
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
