.k8s/clientapp-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend
  labels:
    app: q-nomy
spec:
    type: ClusterIP    
    ports:
    - port: 80
      # targetPort: 80
    selector:
        app: q-nomy
        q.nomy: clientapp

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: q-nomy
    tier: frontend
  name: clientapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: q-nomy
      q.nomy: clientapp
  strategy: {}
  template:
    metadata:
      labels:
        app: q-nomy
        role: web-client        
        q.nomy: clientapp
    spec:
      containers:
      - image: docker.local:5000/clientapp:1.0
        imagePullPolicy: "Never"
        name: clientapp
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
