.k8s/clientapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: clientapp
  name: clientapp
spec:
  ports:
  - name: "85"
    port: 85
    targetPort: 80
  selector:
    io.kompose.service: clientapp
status:
  loadBalancer: {}
