.k8s/sqldatabase-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sqldatabase
  name: sqldatabase
spec:
  ports:
  - name: "1487"
    port: 1487
    targetPort: 1433
  selector:
    io.kompose.service: sqldatabase
status:
  loadBalancer: {}
