.k8s/webapi-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi-frontend
  labels:
    app: q-nomy
spec:
    type: NodePort    
    ports:
      - name: "regular-port"
        port: 5000
        targetPort: 5000
      - name: "secure-port"
        port: 5001
        targetPort: 5001
    selector:
        app: q-nomy
        role: webapi
        q.nomy: webapi
status:
  loadBalancer: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: q-nomy
    tier: frontend
  name: webapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: q-nomy
      q.nomy: webapi
  strategy: {}
  template:
    metadata:
      labels:
        app: q-nomy
        role: webapi
        q.nomy: webapi
    spec:
      containers:
      - image: docker.local:5000/webapi:1.0
        imagePullPolicy: "Always"
        name: webapi
        ports:
        - containerPort: 5000
        - containerPort: 5001
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
