.k8s/webapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: webapi
  name: webapi
spec:
  ports:
  - name: "5007"
    port: 5007
    targetPort: 5000
  - name: "5008"
    port: 5008
    targetPort: 5001
  selector:
    io.kompose.service: webapi
status:
  loadBalancer: {}
