.k8s/qnomy-ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: qnomy-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1  
spec:
  rules: 
  - host: qnomy-local
    http:
      paths:
      - backend:
          serviceName: angular-frontend
          servicePort: 80
  - host: webapi-k8s.qnomy-local
    http:
      paths:
        - backend:
            serviceName: webapi-frontend
            servicePort: 80   # Somehow Ingress in Minikube can not listen on other ports
                              # So we set the available port 80 here and make a redirect to
                              # actual port 5000 in webapi-frontend Service
